flexvolume-drivers/template.yaml
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: k8spspflexvolumes
spec:
  crd:
    spec:
      names:
        kind: K8sPSPFlexVolumes
        listKind: K8sPSPFlexVolumesList
        plural: k8spspflexvolumes
        singular: k8spspflexvolumes
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            allowedFlexVolumes:
              type: array
              items:
                type: object
                properties:
                  driver:
                    type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspflexvolumes

        violation[{"msg": msg, "details": {}}] {
          volume := input_flexvolumes[_]
          not input_flexvolumes_allowed(volume)
          msg := sprintf("FlexVolume %v is not allowed, pod: %v. Allowed drivers: %v", [volume, input.review.object.metadata.name, input.constraint.spec.parameters.allowedFlexVolumes])
        }

        input_flexvolumes_allowed(volume) {
          # An empty list means there is no restriction on flexVolume drivers used
          input.constraint.spec.parameters.allowedFlexVolumes == []
        }

        input_flexvolumes_allowed(volume) {
          allowedfv := input.constraint.spec.parameters.allowedFlexVolumes[_]
          allowedfv.driver == volume.flexVolume.driver
        }

        input_flexvolumes[v] {
          v := input.review.object.spec.volumes[_]
          has_field(v, "flexVolume")
        }
        
        # has_field returns whether an object has a field
        has_field(object, field) = true {
          object[field]
        }
